<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="6dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sh_home_bg"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:paddingStart="4dp"
            android:paddingTop="12dp"
            android:paddingEnd="4dp"
            android:paddingBottom="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layoutDirection="rtl">

                <TextView
                    android:id="@+id/item_his_tv_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/janna"
                    android:text="@string/date"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layoutDirection="rtl">

                <LinearLayout
                    android:id="@+id/item_his_fajr_cb_ly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/item_his_zohr_cb_ly"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/it_his_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fajr" />

                    <CheckBox
                        android:id="@+id/item_his_fajr_cb"
                        style="@style/it_his_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_his_zohr_cb_ly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/item_his_asr_cb_ly"
                    app:layout_constraintStart_toEndOf="@id/item_his_fajr_cb_ly"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/it_his_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zohr" />

                    <CheckBox
                        android:id="@+id/item_his_zohr_cb"
                        style="@style/it_his_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_his_asr_cb_ly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/item_his_maghrb_cb_ly"
                    app:layout_constraintStart_toEndOf="@id/item_his_zohr_cb_ly"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/it_his_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asr" />

                    <CheckBox
                        android:id="@+id/item_his_asr_cb"
                        style="@style/it_his_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_his_maghrb_cb_ly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/item_his_asha_cb_ly"
                    app:layout_constraintStart_toEndOf="@id/item_his_asr_cb_ly"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/it_his_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maghrb" />

                    <CheckBox
                        android:id="@+id/item_his_maghrb_cb"
                        style="@style/it_his_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_his_asha_cb_ly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/item_his_maghrb_cb_ly"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/it_his_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asha" />

                    <CheckBox
                        android:id="@+id/item_his_asha_cb"
                        style="@style/it_his_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>