<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sh_home_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fragment_home_rv"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/fragment_home_ly_top"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layoutDirection="rtl"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/fragment_home_iv_drawer_btn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="6dp"
                android:padding="4dp"
                android:src="@drawable/ic_list"
                android:tint="@color/white" />

            <TextView
                android:id="@+id/fragment_home_tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:fontFamily="@font/janna"
                android:text="@string/date"
                android:textColor="@color/white" />
        </RelativeLayout>

        <TextView
            android:id="@+id/fragment_home_tv_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/janna"
            android:gravity="center"
            android:text="@string/done_pray"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/fragment_home_wave_ly"
            app:layout_constraintTop_toBottomOf="@id/fragment_home_ly_top" />


        <LinearLayout
            android:id="@+id/fragment_home_wave_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_home_ly_top">

            <com.example.prayapp.helper.WaveLoadingView
                android:id="@+id/fragment_home_wave"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:wlv_borderWidth="3dp"
                app:wlv_progressValue="0"
                app:wlv_shapeType="heart"
                app:wlv_titleCenter="%0"
                app:wlv_titleCenterColor="@color/black_light"
                app:wlv_titleCenterSize="20sp"
                app:wlv_waveAmplitude="70"
                app:wlv_waveColor="@color/black_light"
                app:wlv_wave_background_Color="@color/gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/fragment_home_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sh_name_bg"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="2dp"
            android:text="@string/name_"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_home_wave_ly" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_home_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/pray_item" />
</RelativeLayout>